# AuctionTracker

./: .gitignore  RETEX.md  USAGE.md  config.yaml  pyproject.toml
auction_tracker/: __init__.py  classifier.py  cli.py  config.py  currency.py  logging_setup.py
auction_tracker/database/: __init__.py  engine.py  models.py  repository.py
auction_tracker/orchestrator/: __init__.py  discovery.py  images.py  ingest.py  metrics.py  scheduler.py  utils.py  watcher.py  worker.py
auction_tracker/parsing/: __init__.py  base.py  models.py
auction_tracker/transport/: __init__.py  base.py  browser.py  camoufox.py  http.py  router.py
auction_tracker/web/: __init__.py  app.py
legacy/: __init__.py  __main__.py  classifier.py  config.py  historical_monitor.py  monitor.py  smart_monitor.py
legacy/currency/: __init__.py  converter.py
legacy/database/: __init__.py  engine.py  models.py  repository.py
legacy/images/: __init__.py  downloader.py
legacy/scrapers/: __init__.py  base.py  catawiki.py  drouot.py  ebay.py  gazette_drouot.py  interencheres.py  invaluable.py  (+4 more)
tests/: conftest.py  test_catawiki_parser.py  test_config.py  test_database.py  test_drouot_parser.py  test_ebay_parser.py  test_gazette_drouot_parser.py  test_interencheres_parser.py  test_invaluable_parser.py  test_kleinanzeigen_parser.py  test_leboncoin_parser.py  test_liveauctioneers_parser.py  test_marktplaats_parser.py  test_parsing.py  test_ricardo_parser.py  test_scheduler.py  test_subito_parser.py  test_todocoleccion_parser.py  test_transport.py  test_vinted_parser.py  test_yahoo_japan_parser.py
(+87 files in other folders)
